zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__switch_to_mode_plugin_command_permission_denied.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 903
expression: "format!(\"{:#?}\", switch_to_mode_event)"
---
None
