zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__switch_to_tab_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
assertion_line: 3252
expression: "format!(\"{:#?}\", new_tab_event)"
---
Some(
    GoToTab(
        1,
        Some(
            1,
        ),
    ),
)
