zellij-server/src/plugins/unit/snapshots/zellij_server__plugins__plugin_tests__toggle_floating_panes_plugin_command.snap
---
source: zellij-server/src/plugins/./unit/plugin_tests.rs
expression: "format!(\"{:#?}\", toggle_floating_panes_event)"
---
Some(
    ToggleFloatingPanes(
        1,
        None,
        Some(
            NotificationEnd {
                channel: None,
                exit_status: None,
                unblock_condition: None,
                affected_pane_id: None,
                affected_tab_id: None,
                error_message: None,
                stdout_message: None,
            },
        ),
    ),
)
